# ericmiguel.github.io

./: .gitignore  _config.yml  about.md  archives.html  authors.html  bulma.sass  categories.html  index.html  monokai.css  pelicanconf.py  pyproject.toml  style.scss  tags.html
_includes/: post-featured-image.html  post-header.html  social-icons.html  svg-icons.html  welcome_doodle.html
_layouts/: default.html  page.html  post.html  tagpage.html
_posts/: 2014-3-3-Hello-World.md  2020-11-14-using-bash-from-jupyter.md  2020-11-15-solving-jupyterlab-start-warning-at-wsl.md  2020-8-23-First-Post.md  2020-8-30-Hello-World.md  2020-9-6-using-conda-environments-from-jupyterlab.md
_sass/: _svg-icons.scss  _variables.scss  highlights.scss
author/: eric-m-ribeiro.html
category/: article.html
content/2020/11/: solving-jupyterlab-start-warning-at-wsl.md  using-bash-from-jupyter.md
content/2020/9/: using-conda-environments-from-jupyterlab.md
feeds/: all.atom.xml  article.atom.xml
posts/2020/09/using-conda-environments-from-jupyterlab/: index.html
posts/2020/11/run-bash-script-from-jupyter-in-three-simple-steps/: index.html
posts/2020/11/solving-the-jupyterlab-start-warning-at-wsl/: index.html
tag/: anaconda.html  anaconda.md  bash.html  bash.md  jupyter.html  jupyterlab.md  python.html  python.md  wsl.md
theme/css/: main.css  rdark.css
theme/templates/: article.html  base.html  index.html
